--- a/src/Pages/Dashboard/MyOrders/MyOrders.css
+++ b/src/Pages/Dashboard/MyOrders/MyOrders.css
@@ -4,3 +4,9 @@
     grid-row-gap: 100px;
     
 }
+@media screen and (max-width: 500px) {
+    .display-item{
+        grid-template-columns: 1fr;
+        grid-row-gap: 50px;
+    }
+  }
