--- a/src/Pages/Home/AllReviews/AllReviews.css
+++ b/src/Pages/Home/AllReviews/AllReviews.css
@@ -2,3 +2,9 @@
     display: grid;
    grid-template-columns: repeat(3, 1fr);
 }
+@media screen and (max-width: 500px) {
+    .all-review{
+        grid-template-columns: 1fr;
+        grid-row-gap: 50px;
+    }
+  }
