--- a/src/Pages/Home/Home/Home.css
+++ b/src/Pages/Home/Home/Home.css
@@ -3,3 +3,9 @@
     grid-template-columns: repeat(3,1fr);
     grid-gap: 50px;
 }
+@media screen and (max-width: 500px) {
+    .products-container{
+        grid-template-columns: 1fr;
+        grid-row-gap: 50px;
+    }
+  }
